// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Header Solid 1`] = `
<div
  className="sc-bdnxRM bBlfBP"
>
  <header
    className="sc-gtsrHT jsaTwa"
    style={
      Object {
        "--gradient-end": "hsl(180, 78%, 68%)",
        "--gradient-start": "hsl(200, 78%, 68%)",
      }
    }
  >
    <div
      className="sc-dlnjwi FHneQ"
    >
      <div
        className="sc-hKFxyN jcnhjz"
      />
      <div
        className="sc-eCApnc itBkSq"
      >
        <a
          href="/"
        >
          Website Title
        </a>
      </div>
    </div>
    <span
      className="sc-jSFjdj gcZhDk"
    />
  </header>
  <img
    alt="Hero"
    src="https://raw.githubusercontent.com/marcomontalbano/figma-export/master/cover.png"
  />
</div>
`;

exports[`Storyshots Header Transparent 1`] = `
<div
  className="sc-bdnxRM bBlfBP"
>
  <header
    className="sc-gtsrHT etBULf"
    style={
      Object {
        "--gradient-end": "hsl(180, 78%, 68%)",
        "--gradient-start": "hsl(200, 78%, 68%)",
      }
    }
  >
    <div
      className="sc-dlnjwi FHneQ"
    >
      <div
        className="sc-hKFxyN jcgJbc"
      />
      <div
        className="sc-eCApnc itBkSq"
      >
        <a
          href="/"
        >
          Website Title
        </a>
      </div>
    </div>
    <span
      className="sc-jSFjdj gcZhDk"
    />
  </header>
  <img
    alt="Hero"
    src="https://raw.githubusercontent.com/marcomontalbano/figma-export/master/cover.png"
  />
</div>
`;

exports[`Storyshots Header With Link 1`] = `
<div
  className="sc-bdnxRM bBlfBP"
>
  <header
    className="sc-gtsrHT jsaTwa"
    style={
      Object {
        "--gradient-end": "hsl(180, 78%, 68%)",
        "--gradient-start": "hsl(200, 78%, 68%)",
      }
    }
  >
    <div
      className="sc-dlnjwi FHneQ"
    >
      <div
        className="sc-hKFxyN jcnhjz"
      />
      <div
        className="sc-eCApnc itBkSq"
      >
        <a
          href="/"
        >
          Website Title
        </a>
      </div>
      <div
        className="sc-gKAaRy dUOthJ"
      >
        <a
          href="https://github.com/marcomontalbano"
        >
          GitHub
        </a>
      </div>
    </div>
    <span
      className="sc-jSFjdj gcZhDk"
    />
  </header>
  <img
    alt="Hero"
    src="https://raw.githubusercontent.com/marcomontalbano/figma-export/master/cover.png"
  />
</div>
`;

exports[`Storyshots Markdown Basic 1`] = `
<div
  className="sc-bdnxRM bBlfBP"
  style={
    Object {
      "margin": "15px",
    }
  }
>
  <div
    className="sc-iCoGMd fnPOTh"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`Storyshots Markdown Real Data 1`] = `
<div
  className="sc-bdnxRM bBlfBP"
  style={
    Object {
      "margin": "15px",
    }
  }
>
  <div
    className="sc-iCoGMd fnPOTh"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`Storyshots Tile Basic 1`] = `
<div
  className="sc-bdnxRM bBlfBP"
  style={
    Object {
      "width": "50%",
    }
  }
>
  <div
    className="sc-fujyAs gvuaal"
  >
    <div>
      <img
        alt="figma-export"
        src="https://raw.githubusercontent.com/marcomontalbano/figma-export/master/cover.png"
      />
      <div
        className="content"
      >
        <h2>
          figma-export
        </h2>
        <p>
          Export tool for Figma. You can easily and automatically export your Figma components and use them directly into your website.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tile With Link 1`] = `
<div
  className="sc-bdnxRM bBlfBP"
  style={
    Object {
      "width": "50%",
    }
  }
>
  <div
    className="sc-fujyAs gvuaal"
  >
    <a
      href="https://github.com/marcomontalbano/figma-export"
    >
      <img
        alt="figma-export"
        src="https://raw.githubusercontent.com/marcomontalbano/figma-export/master/cover.png"
      />
      <div
        className="content"
      >
        <h2>
          figma-export
        </h2>
        <p>
          Export tool for Figma. You can easily and automatically export your Figma components and use them directly into your website.
        </p>
      </div>
    </a>
  </div>
</div>
`;

exports[`Storyshots Tile With Long Description 1`] = `
<div
  className="sc-bdnxRM bBlfBP"
  style={
    Object {
      "width": "50%",
    }
  }
>
  <div
    className="sc-fujyAs gvuaal"
  >
    <div>
      <img
        alt="figma-export"
        src="https://raw.githubusercontent.com/marcomontalbano/figma-export/master/cover.png"
      />
      <div
        className="content"
      >
        <h2>
          figma-export
        </h2>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque non posuere justo, a imperdiet leo. Etiam non ipsum a felis lobortis convallis sit amet id odio. Aliquam interdum posuere enim. Donec sollicitudin interdum sodales. Pellentesque eget nibh ac massa tristique eleifend in vitae lorem. Donec semper lectus et fermentum vehicula. Ut elementum fermentum nulla. Ut eget cursus nisi. Aliquam nec faucibus dolor. Pellentesque felis velit, volutpat eget egestas nec, ultricies eget magna. Proin iaculis consequat ante.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TileList Basic 1`] = `
<div
  className="sc-bdnxRM bBlfBP"
>
  <div
    className="sc-pNWdM bkftxK"
  >
    <div
      className="sc-fujyAs gvuaal"
    >
      <a
        href="https://github.com/marcomontalbano/figma-export"
      >
        <img
          alt="figma-export"
          src="https://raw.githubusercontent.com/marcomontalbano/figma-export/master/cover.png"
        />
        <div
          className="content"
        >
          <h2>
            figma-export
          </h2>
          <p>
            Export tool for Figma. You can easily and automatically export your Figma components and use them directly into your website.
          </p>
        </div>
      </a>
    </div>
    <div
      className="sc-fujyAs gvuaal"
    >
      <a
        href="https://github.com/marcomontalbano/wasm-vs-js-benchmark"
      >
        <img
          alt="WebAssembly vs Javascript"
          src="https://raw.githubusercontent.com/marcomontalbano/wasm-vs-js-benchmark/master/cover.png"
        />
        <div
          className="content"
        >
          <h2>
            WebAssembly vs Javascript
          </h2>
          <p>
            A comparison between WebAssembly and Javascript
          </p>
        </div>
      </a>
    </div>
    <div
      className="sc-fujyAs gvuaal"
    >
      <a
        href="https://github.com/marcomontalbano/video-to-markdown"
      >
        <img
          alt="Video to Markdown"
          src="https://raw.githubusercontent.com/marcomontalbano/video-to-markdown/master/cover.png"
        />
        <div
          className="content"
        >
          <h2>
            Video to Markdown
          </h2>
          <p>
            How to embed a video in markdown? Here the answer. Add videos to your markdown files easier.
          </p>
        </div>
      </a>
    </div>
    <div
      className="sc-fujyAs gvuaal"
    >
      <a
        href="https://github.com/marcomontalbano/github-emoji"
      >
        <img
          alt="GitHub Emoji"
          src="https://raw.githubusercontent.com/marcomontalbano/github-emoji/master/cover.png"
        />
        <div
          className="content"
        >
          <h2>
            GitHub Emoji
          </h2>
          <p>
            Finally a complete list of GitHub Emoji
          </p>
        </div>
      </a>
    </div>
    <div
      className="sc-fujyAs gvuaal"
    >
      <a
        href="https://github.com/marcomontalbano/speedtest-for-digitalocean"
      >
        <img
          alt="Speed Test for DigitalOcean"
          src="https://raw.githubusercontent.com/marcomontalbano/speedtest-for-digitalocean/master/cover.png"
        />
        <div
          className="content"
        >
          <h2>
            Speed Test for DigitalOcean
          </h2>
          <p>
            Run speed tests for all DigitalOcean datacenters faster than ever.
          </p>
        </div>
      </a>
    </div>
    <div
      className="sc-fujyAs gvuaal"
    >
      <a
        href="https://github.com/marcomontalbano/html-miner"
      >
        <img
          alt="HTML Miner"
          src="https://raw.githubusercontent.com/marcomontalbano/html-miner/master/cover.png"
        />
        <div
          className="content"
        >
          <h2>
            HTML Miner
          </h2>
          <p>
            A powerful miner that will scrape html pages for you. \` HTML Scraper ´
          </p>
        </div>
      </a>
    </div>
    <div
      className="sc-fujyAs gvuaal"
    >
      <a
        href="https://github.com/marcomontalbano/an-introduction-to-frontend"
      >
        <img
          alt="An introduction to Frontend"
          src="https://raw.githubusercontent.com/marcomontalbano/an-introduction-to-frontend/master/cover.png"
        />
        <div
          className="content"
        >
          <h2>
            An introduction to Frontend
          </h2>
          <p>
            This is an introduction to Frontend.
          </p>
        </div>
      </a>
    </div>
    <div
      className="sc-fujyAs gvuaal"
    >
      <a
        href="https://github.com/marcomontalbano/numberun"
      >
        <img
          alt="NumbeRun"
          src="https://raw.githubusercontent.com/marcomontalbano/numberun/master/cover.png"
        />
        <div
          className="content"
        >
          <h2>
            NumbeRun
          </h2>
          <p>
            NumbeRun is a puzzle game I developed in 2007 for my school-leaving examination. The game was developed in Microsoft Visual C# 2005 using the Microsoft XNA library.
          </p>
        </div>
      </a>
    </div>
    <div
      className="sc-fujyAs gvuaal"
    >
      <a
        href="https://github.com/marcomontalbano/kata.js"
      >
        <img
          alt="Test-Driven Development with Mocha: How to"
          src="https://raw.githubusercontent.com/marcomontalbano/kata.js/master/cover.png"
        />
        <div
          className="content"
        >
          <h2>
            Test-Driven Development with Mocha: How to
          </h2>
          <p>
            A collection of katas with JavaScript.
          </p>
        </div>
      </a>
    </div>
    <div
      className="sc-fujyAs gvuaal"
    >
      <a
        href="https://github.com/marcomontalbano/jquery-jcreate"
      >
        <img
          alt="jCreate"
          src="https://raw.githubusercontent.com/marcomontalbano/jquery-jcreate/master/cover.png"
        />
        <div
          className="content"
        >
          <h2>
            jCreate
          </h2>
          <p>
            jCreate is a new special event for jQuery. Just use .on('create', ..); the callback will be triggered when elements are created on the page.
          </p>
        </div>
      </a>
    </div>
  </div>
</div>
`;
